# docs/api/openapi.json
@@ -1786,6 +1786,10 @@
           "to": {
             "type": "string",
             "pattern": "^\\+[1-9]\\d{7,14}$"
+          },
+          "locale": {
+            "type": "string",
+            "pattern": "^[a-z]{2,3}(?:-[A-Z]{2})?$"
           }
         }
       },
